feat: Add server-backed admin approval/rejection workflow and backend keepalive
- Updated admin panel to show VIEW button for applications and registrations
- Modal now loads real data from server and shows Approve/Reject options
- Both approve/reject actions call server endpoints (PUT /api/applications/:id/status and PUT /api/users/:id/status)
- Added GET endpoints for fetching applications and users from Supabase or file fallback
- Added /health keepalive endpoint to prevent Render backend auto-sleep on free tier
- Frontend pings /health every 10 minutes to keep backend awake
- Fixed async/await issue in registration modal
- Improved viewApplicationDetails and viewRegistrationDetails to fetch real data
- Added rejectRegistration function with server integration

--- a/public/config.json
+++ b/public/config.json
@@ -1,5 +1,6 @@
 {
   "bitcoinWallet": "YOUR_BITCOIN_WALLET_ADDRESS_HERE",
   "applicationFee": 50,
-  "currency": "USD"
+  "currency": "USD",
+  "enableClaudeHaiku": true
 }
